# data-reify

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  data-reify.cabal
.github/workflows/: haskell-ci.yml
Data/: Reify.hs
Data/Reify/: Graph.hs
examples/: example1.hs  simplify.hs
spec/Data/: ReifySpec.hs
test/: Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs  Test7.hs
test-common/: Common.hs
